--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,14 @@ dependencies = [
     "rich-click>=1.8.4",
 ]
 
+urls.changelog = "https://github.com/whiteprints-tests/test-pypi-darwin-py312-test/releases"
+urls.discussions = "https://github.com/whiteprints-tests/test-pypi-darwin-py312-test/discussions"
+urls.documentation = "https://github.com/whiteprints-tests/test-pypi-darwin-py312-test"
+urls.download = "https://github.com/whiteprints-tests/test-pypi-darwin-py312-test/releases"
+urls.homepage = "https://github.com/whiteprints-tests/test-pypi-darwin-py312-test"
+urls.integration = "https://github.com/whiteprints-tests/test-pypi-darwin-py312-test/actions"
+urls.issues = "https://github.com/whiteprints-tests/test-pypi-darwin-py312-test/issues"
+urls.repository = "https://github.com/whiteprints-tests/test-pypi-darwin-py312-test"
 scripts.test-pypi-darwin-py312-test = "test_pypi_darwin_py312_test.cli.entrypoint:test_pypi_darwin_py312_test"
 
 [tool.pyproject-fmt]
